manifests/postgres-exporter-sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
  namespace: exporter
spec:
  selector:
    app: postgres-exporter
  type: ClusterIP
  ports:
    - name: postgres-exporter
      port: 9187
      targetPort: 9187
---
