manifests/ps-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: database
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  type: NodePort
  ports:
    - port: 5432
---
