manifests/devseconnect-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devseconnect-web-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devseconnect-web-server
  template:
    metadata:
      labels:
        app: devseconnect-web-server
    spec:
      containers:
        - name: devseconnect-web-server
          image: buergi1986/devseconnect-web_server:0.0.1
          ports:
            - containerPort: 1323
---
apiVersion: v1
kind: Service
metadata:
  name: devseconnect-web-server-service
spec:
  selector:
    app: devseconnect-web-server
  ports:
    - protocol: TCP
      port: 1323
      targetPort: 1323
  type: ClusterIP # Using ClusterIP, Traefik will handle load balancing and routing to the pods
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: devseconnect-web-server
                port:
                  number: 1323
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: devseconnect-web-server
                port:
                  number: 1323
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: devseconnect-web-server
                port:
                  number: 1323
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: devseconnect-web-server
                port:
                  number: 1323
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: devseconnect-web-server
                port:
                  number: 1323
          - path: /post
            pathType: Prefix
            backend:
              service:
                name: devseconnect-web-server
                port:
                  number: 1323
          - path: /comments
            pathType: Prefix
            backend:
              service:
                name: devseconnect-web-server
                port:
                  number: 1323
          - path: /comment
            pathType: Prefix
            backend:
              service:
                name: devseconnect-web-server
                port:
                  number: 1323
          - path: /tags
            pathType: Prefix
            backend:
              service:
                name: devseconnect-web-server
                port:
                  number: 1323
          - path: /tag
            pathType: Prefix
            backend:
              service:
                name: devseconnect-web-server
                port:
                  number: 1323
